feat: melhorando a configuração

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/agendamedica?currentSchema=public
-spring.datasource.username=agenda_user
+spring.datasource.username=postgres
 spring.datasource.password=200523
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -24,3 +24,5 @@ spring.datasource.hikari.maximum-pool-size=5
 # Validation
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+spring.datasource.hikari.data-source-properties.password=200523
